--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "core-js": "^3.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
